--- a/house-job-form.css
+++ b/house-job-form.css
@@ -1,18 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Civil Hospital Karachi</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- <link rel="stylesheet" href="services.css"> -->
-<style>
-    *{
+*{
     padding: 0%;
     margin: 0%;
     box-sizing: border-box;
@@ -39,6 +25,7 @@ nav{
     justify-content: space-around;
     align-items: center;
     text-align: center;
+    border-bottom: 3px  solid hsl(135, 33%, 36%);
 
 }
 .ancors{
@@ -90,6 +77,92 @@ nav{
 
 
 /* navbarend */
+
+.house-job-section{
+    width: 100%;
+    height: 200px;
+    background-color: #f7fcfc;
+    align-items: center;
+    text-align: center;
+}
+.house-job-container{
+    background-color: #f7fcfc;
+    width: 100%;
+    display: flex;
+    text-align: center;
+    align-items: center;
+}
+.house-job-title{
+    font-weight: bold;
+    position: relative;
+    text-align: center;
+    padding-left: 40%;
+/* text-decoration: underline; */
+}
+.house-job-title::after{
+    content: "";
+    position: absolute;
+    bottom: -10px;
+    width: 15%;
+    height: 4px;
+    background-color: hsl(135, 33%, 36%);    
+    left: 75%;
+}
+.form-section{
+    width: 100%;
+    height: 50vh;
+    background-color: #f7fcfc;
+    padding-top: 60px;
+}
+.form-container {
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    background-color: white;
+}
+
+.form-row {
+    display: flex;
+    gap: 10px; /* Space between the two input fields */
+    margin-bottom: 10px;
+}
+
+.form-container input[type="text"],
+.form-container select {
+    flex: 1; /* Make both inputs the same size */
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+}
+
+.form-container label {
+    font-size: 14px;
+    margin-right: 10px;
+}
+
+.radio-group {
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.form-container button {
+    background-color: hsl(135, 33%, 36%);
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    font-size: 18px;
+    cursor: pointer;
+    display: block;
+    width: 100%;
+}
+
+.form-container button:hover {
+    background-color: #176d35;
+}
 
 /* FOOTER SECTION START */
 
@@ -209,7 +282,88 @@ footer{
     #hamburger{
         display: inline-block;
     }
-
+    .house-job-section{
+        width: 100%;
+        height: 200px;
+        background-color: #f7fcfc;
+        align-items: center;
+        text-align: center;
+    }
+    .house-job-container{
+        background-color: #f7fcfc;
+        width: 100%;
+        display: flex;
+        text-align: center;
+        align-items: center;
+    }
+    .house-job-title{
+        font-weight: bold;
+        position: relative;
+        text-align: center;
+        padding-left: 20%;
+    /* text-decoration: underline; */
+    }
+    .house-job-title::after{
+        content: "";
+        position: absolute;
+        bottom: -10px;
+        width: 44%;
+        height: 4px;
+        background-color: hsl(135, 33%, 36%);    
+        left: 40%;
+    }
+    .form-section{
+        width: 100%;
+        height: 80vh;
+        background-color: #f7fcfc;
+        padding-top: 60px;
+    }
+    .form-container {
+        max-width: 400px;
+        margin: 0 auto;
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+        background-color: white;
+    }
+    
+    .form-row {
+        display: flex;
+        flex-direction: column;
+        gap: 10px; /* Space between the two input fields */
+        margin-bottom: 10px;
+    }
+    
+    .form-container input[type="text"],
+    .form-container select {
+        flex: 1; /* Make both inputs the same size */
+        padding: 10px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        font-size: 16px;
+    }
+    
+    .form-container label {
+        font-size: 14px;
+        margin-right: 10px;
+    }
+    
+    .radio-group {
+        margin-bottom: 20px;
+        text-align: center;
+    }
+    
+    .form-container button {
+        background-color: hsl(135, 33%, 36%);
+        color: white;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 5px;
+        font-size: 18px;
+        cursor: pointer;
+        display: block;
+        width: 100%;
+    }
     footer{
         padding-top: 10%;
         flex-direction: column;
@@ -289,6 +443,88 @@ footer{
     }
     #hamburger{
         display: inline-block;
+    }
+    .house-job-section{
+        width: 100%;
+        height: 200px;
+        background-color: #f7fcfc;
+        align-items: center;
+        text-align: center;
+    }
+    .house-job-container{
+        background-color: #f7fcfc;
+        width: 100%;
+        display: flex;
+        text-align: center;
+        align-items: center;
+    }
+    .house-job-title{
+        font-weight: bold;
+        position: relative;
+        text-align: center;
+        padding-left: 20%;
+    /* text-decoration: underline; */
+    }
+    .house-job-title::after{
+        content: "";
+        position: absolute;
+        bottom: -10px;
+        width: 44%;
+        height: 4px;
+        background-color: hsl(135, 33%, 36%);    
+        left: 40%;
+    }
+    .form-section{
+        width: 100%;
+        height: 80vh;
+        background-color: #f7fcfc;
+        padding-top: 60px;
+    }
+    .form-container {
+        max-width: 400px;
+        margin: 0 auto;
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+        background-color: white;
+    }
+    
+    .form-row {
+        display: flex;
+        flex-direction: column;
+        gap: 10px; /* Space between the two input fields */
+        margin-bottom: 10px;
+    }
+    
+    .form-container input[type="text"],
+    .form-container select {
+        flex: 1; /* Make both inputs the same size */
+        padding: 10px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        font-size: 16px;
+    }
+    
+    .form-container label {
+        font-size: 14px;
+        margin-right: 10px;
+    }
+    
+    .radio-group {
+        margin-bottom: 20px;
+        text-align: center;
+    }
+    
+    .form-container button {
+        background-color: hsl(135, 33%, 36%);
+        color: white;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 5px;
+        font-size: 18px;
+        cursor: pointer;
+        display: block;
+        width: 100%;
     }
     footer{
         padding-top: 10%;
@@ -447,6 +683,91 @@ footer{
     }
     #hamburger{
         display: inline-block;
+    }
+    .house-job-section{
+        width: 100%;
+        height: 200px;
+        background-color: #f7fcfc;
+        align-items: center;
+        text-align: center;
+    }
+    .house-job-container{
+        background-color: #f7fcfc;
+        width: 100%;
+        display: flex;
+        text-align: center;
+        align-items: center;
+    }
+    .house-job-title{
+        font-weight: bold;
+        position: relative;
+        text-align: center;
+        padding-left: 40%;
+    /* text-decoration: underline; */
+    }
+    .house-job-title::after{
+        content: "";
+        position: absolute;
+        bottom: -10px;
+        width: 15%;
+        height: 4px;
+        background-color: hsl(135, 33%, 36%);    
+        left: 75%;
+    }
+    .form-section{
+        width: 100%;
+        height: 70vh;
+        background-color: #f7fcfc;
+        padding-top: 60px;
+    }
+    .form-container {
+        max-width: 400px;
+        margin: 0 auto;
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+        background-color: white;
+    }
+    
+    .form-row {
+        display: flex;
+        gap: 10px; /* Space between the two input fields */
+        margin-bottom: 10px;
+    }
+    
+    .form-container input[type="text"],
+    .form-container select {
+        flex: 1; /* Make both inputs the same size */
+        padding: 10px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        font-size: 16px;
+    }
+    
+    .form-container label {
+        font-size: 14px;
+        margin-right: 10px;
+    }
+    
+    .radio-group {
+        margin-bottom: 20px;
+        text-align: center;
+    }
+    
+    .form-container button {
+        background-color: hsl(135, 33%, 36%);
+        color: white;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 5px;
+        font-size: 18px;
+        cursor: pointer;
+        display: block;
+        width: 100%;
+    }
+    
+    .form-container button:hover {
+        background-color: #176d35;
     }
     footer{
         padding-top: 10%;
@@ -635,99 +956,3 @@ footer{
 }
 /* FOOTER SECTION END */
 }
-</style>
-
-</head>
-<body>
-    <!-- header -->
-    <section class="header">
-        <span><i class="fa fa-phone" aria-hidden="true"></i></span>
-        <span class=".phone-number">Call us now (021) 99215740</span>
-    </section>
-    <!-- navbar start -->
-    <nav>
-        <div class="logo-div"><img src="/assets/logo.png" class="logo-div"></div>
-        <div class="ancors">
-            <a class="nav-ancor" style="color:hsl(135, 33%, 36%);" href="index.html">HOME</a>
-            <a class="nav-ancor" style="color: hsl(135, 33%, 36%);" href="department.html">DEPARTMENTS</a>
-            <a class="nav-ancor" style="color: hsl(135, 33%, 36%);" href="doctors.html">DOCTORS</a>
-            <a class="nav-ancor" style="color: hsl(135, 33%, 36%);" href="house-job.html">HOUSE JOB</a>
-            <a class="nav-ancor" style="color: hsl(135, 33%, 36%);" href="services.html">OUR SERVICES</a>
-            <a class="nav-ancor" style="color: hsl(135, 33%, 36%);" href="about.html">ABOUT</a>
-            <a class="nav-ancor" style="color: hsl(135, 33%, 36%);" href="contact.html">CONTACT</a>
-            <a class="nav-ancor" style="color: hsl(135, 33%, 36%);" href="tender.html">TENDER</a>
-        </div>
-        <div class="sindh-logo-div"><img src="/assets/sindh-logo.png" class="nav-sec-logo" height="100px" width="90px"><i
-                 data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
-                aria-controls="offcanvasRight" class=" fa-solid fa-bars" id="hamburger"></i></div>
-
-        <div class="offcanvas offcanvas-end w-100" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
-            <div class="offcanvas-header">
-                <h5 id="offcanvasRightLabel"></h5>
-                <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
-                    aria-label="Close"></button>
-            </div>
-            <div class="offcanvas-body">
-                <a class="nav-ancor" style="color:hsl(135, 33%, 36%);" href="index.html">HOME</a>
-            <a class="nav-ancor" style="color: hsl(135, 33%, 36%);" href="department.html">DEPARTMENTS</a>
-            <a class="nav-ancor" style="color: hsl(135, 33%, 36%);" href="doctors.html">DOCTORS</a>
-            <a class="nav-ancor" style="color: hsl(135, 33%, 36%);" href="house-job.html">HOUSE JOB</a>
-            <a class="nav-ancor" style="color: hsl(135, 33%, 36%);" href="services.html">OUR SERVICES</a>
-            <a class="nav-ancor" style="color: hsl(135, 33%, 36%);" href="about.html">ABOUT</a>
-            <a class="nav-ancor" style="color: hsl(135, 33%, 36%);" href="contact.html">CONTACT</a>
-            <a class="nav-ancor" style="color: hsl(135, 33%, 36%);" href="tender.html">TENDER</a>
-            </div>
-        </div>
-    </nav>
-    <!-- navbar end -->
-
-
-<!-- FOOTER START -->
-    <footer>
-        <div class="left">
-            <div class="footer-logo"><img src="/assets/logo.png" class="footer-logo"></div>
-            <div class="footer-left-para">Dr. Ruth K. M. Pfau, Civil Hospital Karachi
-                is an extensive multidisciplinary facility of
-                executive health care services in the heart of Karachi</div>
-            <div class="footer-left-location"><i class="fa-solid fa-location-dot"></i><span
-                    class="footer-left-span">Civil Hospital Karachi, Rafiqui H.J. Shaheed Road, Nanakwara, Saddar,
-                    Karachi, Sindh, Pakistan.</span>
-            </div>
-            <div class="footer-phone"><i class="fa-solid fa-phone"></i> <span class="footer-left-span"> (021)
-                    99521740</span></div>
-            <div class="footer-inbox"><i class="fa-solid fa-envelope"></i> <span class="footer-left-span">
-                    info@chk.gov.pk</span></div>
-            <a href="https://www.facebook.com/chkarachi?_rdr"><i class="fa-brands fa-facebook-f"></i></a>
-        </div>
-
-        <div class="center">
-            <div class="footer-center-title">
-                <h3 class="footer-center-title">Department</h3>
-            </div>
-            <div class="footer-ancors">
-                <a href="dental-care.html" class="footer-ancor">> Dental Care</a>
-                <a href="medicine.html" class="footer-ancor">> Medicine</a>
-                <a href="othopedic.html" class="footer-ancor">> Orthopedic</a>
-                <a href="emergency.html" class="footer-ancor">> Emergency</a>
-            </div>
-        </div>
-        <div class="right">
-            <div class="footer-right-title">
-                <h3 class="footer-right-title">Working Hours</h3>
-            </div>
-            <p class="working-days">Out-patient Department</p>
-            <p class="working-days">Out-Monday to Saturday | 8 AM to 2 PM
-                Sunday | OPD Closed</p>
-            <div class="right-footer-span">
-                Emergency Department & Pharmacy | 24x7
-            </div>
-        </div>
-
-
-    </footer>
-    <script src="https://kit.fontawesome.com/0a02fbb60a.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-</body>
-</html>
