--- a/house-job.css
+++ b/house-job.css
@@ -1,18 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Civil Hospital Karachi</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- <link rel="stylesheet" href="services.css"> -->
-<style>
-    *{
+*{
     padding: 0%;
     margin: 0%;
     box-sizing: border-box;
@@ -39,7 +25,7 @@ nav{
     justify-content: space-around;
     align-items: center;
     text-align: center;
-
+    border-bottom: 3px solid hsl(135, 33%, 36%);
 }
 .ancors{
     width: 70%;
@@ -90,6 +76,122 @@ nav{
 
 
 /* navbarend */
+
+.house-job-section{
+    width: 100%;
+    height: 200px;
+    background-color: #f7fcfc;
+    align-items: center;
+    text-align: center;
+}
+.house-job-container{
+    background-color: #f7fcfc;
+    width: 100%;
+    display: flex;
+    text-align: center;
+    align-items: center;
+}
+.house-job-title{
+    font-weight: bold;
+    position: relative;
+    text-align: center;
+    padding-left: 45%;
+/* text-decoration: underline; */
+}
+.house-job-title::after{
+    content: "";
+    position: absolute;
+    bottom: -10px;
+    width: 15%;
+    height: 4px;
+    background-color: hsl(135, 33%, 36%);    
+    left: 81%;
+}
+.flex{
+    width: 100%;
+    height: 400px;
+    background-color: #f7fcfc;
+    display: flex;
+    justify-content: space-evenly;
+    padding-top: 60px;
+}
+.card{
+    width: 20%;
+    height: 150px;
+    border: none;
+    box-shadow: 5px 10px 15px 3px rgba(0, 0, 0, 0.1);
+}
+.fa-bell{
+    color: hsl(135, 33%, 36%);
+    border: 1px solid hsl(135, 33%, 36%);
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 30px;
+    padding-top: 10px;
+    margin-top: 10px;
+    margin-left: 100px;
+}
+.bx-news{
+    color: hsl(135, 33%, 36%);
+    border: 1px solid hsl(135, 33%, 36%);
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 30px;
+    padding-top: 10px;
+    margin-top: 10px;
+    margin-left: 100px;
+}
+.fa-newspaper{
+    color: hsl(135, 33%, 36%);
+    border: 1px solid hsl(135, 33%, 36%);
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 30px;
+    padding-top: 10px;
+    margin-top: 10px;
+    margin-left: 100px;
+}
+.fa-search{
+    color: hsl(135, 33%, 36%);
+    border: 1px solid hsl(135, 33%, 36%);
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 30px;
+    padding-top: 10px;
+    margin-top: 10px;
+    margin-left: 100px;
+}
+.card-title{
+    text-align: center;
+    align-items: center;
+}
+.flex-ancor{
+    text-decoration: none;
+    color: hsl(135, 33%, 36%);
+}
+.flex-ancor:hover{
+    color: hsl(135, 33%, 36%);
+}
 
 /* FOOTER SECTION START */
 
@@ -210,6 +312,125 @@ footer{
         display: inline-block;
     }
 
+    .house-job-section{
+        width: 100%;
+        height: 200px;
+        background-color: #f7fcfc;
+        align-items: center;
+        text-align: center;
+    }
+    .house-job-container{
+        background-color: #f7fcfc;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        align-items: center;
+    }
+    .house-job-title{
+        font-weight: bold;
+        position: relative;
+        text-align: center;
+        padding-left: 30%;
+    /* text-decoration: underline; */
+    }
+    .house-job-title::after{
+        content: "";
+        position: absolute;
+        bottom: -10px;
+        width: 35%;
+        height: 4px;
+        background-color: hsl(135, 33%, 36%);    
+        left: 55%;
+    }
+    .flex{
+        width: 100%;
+        height: 600px;
+        background-color: #f7fcfc;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        padding-top: 60px;
+    }
+    .card{
+        width: 80%;
+        height: 150px;
+        margin-left: 10%;
+        border: none;
+        box-shadow: 5px 10px 15px 3px rgba(0, 0, 0, 0.1);
+    }
+    .fa-bell{
+        color: hsl(135, 33%, 36%);
+        border: 1px solid hsl(135, 33%, 36%);
+        border-radius: 50%;
+        width: 50px;
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        font-size: 30px;
+        padding-top: 10px;
+        margin-top: 10px;
+        margin-left: 100px;
+    }
+    .bx-news{
+        color: hsl(135, 33%, 36%);
+        border: 1px solid hsl(135, 33%, 36%);
+        border-radius: 50%;
+        width: 50px;
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        font-size: 30px;
+        padding-top: 10px;
+        margin-top: 10px;
+        margin-left: 100px;
+    }
+    .fa-newspaper{
+        color: hsl(135, 33%, 36%);
+        border: 1px solid hsl(135, 33%, 36%);
+        border-radius: 50%;
+        width: 50px;
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        font-size: 30px;
+        padding-top: 10px;
+        margin-top: 10px;
+        margin-left: 100px;
+    }
+    .fa-search{
+        color: hsl(135, 33%, 36%);
+        border: 1px solid hsl(135, 33%, 36%);
+        border-radius: 50%;
+        width: 50px;
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        font-size: 30px;
+        padding-top: 10px;
+        margin-top: 10px;
+        margin-left: 100px;
+    }
+    .card-title{
+        text-align: center;
+        align-items: center;
+    }
+    .flex-ancor{
+        text-decoration: none;
+        color: hsl(135, 33%, 36%);
+    }
+    .flex-ancor:hover{
+        color: hsl(135, 33%, 36%);
+    }
+
     footer{
         padding-top: 10%;
         flex-direction: column;
@@ -290,6 +511,111 @@ footer{
     #hamburger{
         display: inline-block;
     }
+
+    .house-job-section{
+        width: 100%;
+        height: 200px;
+        background-color: #f7fcfc;
+        align-items: center;
+        text-align: center;
+    }
+    .house-job-container{
+        background-color: #f7fcfc;
+        width: 100%;
+        display: flex;
+        text-align: center;
+        align-items: center;
+    }
+    .house-job-title{
+        font-weight: bold;
+        position: relative;
+        text-align: center;
+        padding-left: 30%;
+    /* text-decoration: underline; */
+    }
+    .house-job-title::after{
+        content: "";
+        position: absolute;
+        bottom: -10px;
+        width: 35%;
+        height: 4px;
+        background-color: hsl(135, 33%, 36%);    
+        left: 55%;
+    }
+    .flex{
+        width: 100%;
+        height: 600px;
+        background-color: #f7fcfc;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        padding-top: 60px;
+    }
+    .card{
+        width: 80%;
+        height: 130px;
+        margin-left: 10%;
+        border: none;
+        box-shadow: 5px 10px 15px 3px rgba(0, 0, 0, 0.1);
+    }
+    .fa-bell{
+        color: hsl(135, 33%, 36%);
+        border: 1px solid hsl(135, 33%, 36%);
+        border-radius: 50%;
+        width: 50px;
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        font-size: 30px;
+        padding-top: 10px;
+        margin-top: 10px;
+        margin-left: 150px;
+    }
+    .fa-newspaper{
+        color: hsl(135, 33%, 36%);
+        border: 1px solid hsl(135, 33%, 36%);
+        border-radius: 50%;
+        width: 50px;
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        font-size: 30px;
+        padding-top: 10px;
+        margin-top: 10px;
+        margin-left: 150px;
+    }
+    .fa-search{
+        color: hsl(135, 33%, 36%);
+        border: 1px solid hsl(135, 33%, 36%);
+        border-radius: 50%;
+        width: 50px;
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        font-size: 30px;
+        padding-top: 10px;
+        margin-top: 10px;
+        margin-left: 150px;
+    }
+    .card-title{
+        text-align: center;
+        align-items: center;
+    }
+    .flex-ancor{
+        text-decoration: none;
+        color: hsl(135, 33%, 36%);
+    }
+    .flex-ancor:hover{
+        color: hsl(135, 33%, 36%);
+    }
+
+
     footer{
         padding-top: 10%;
         flex-direction: column;
@@ -447,6 +773,109 @@ footer{
     }
     #hamburger{
         display: inline-block;
+    }
+    .house-job-section{
+        width: 100%;
+        height: 200px;
+        background-color: #f7fcfc;
+        align-items: center;
+        text-align: center;
+    }
+    .house-job-container{
+        background-color: #f7fcfc;
+        width: 100%;
+        display: flex;
+        text-align: center;
+        align-items: center;
+    }
+    .house-job-title{
+        font-weight: bold;
+        position: relative;
+        text-align: center;
+        padding-left: 40%;
+    /* text-decoration: underline; */
+    }
+    .house-job-title::after{
+        content: "";
+        position: absolute;
+        bottom: -10px;
+        width: 25%;
+        height: 4px;
+        background-color: hsl(135, 33%, 36%);    
+        left: 70%;
+    }
+    .flex{
+        width: 100%;
+        height: 500px;
+        background-color: #f7fcfc;
+        display: grid;                    /* Use CSS Grid */
+        grid-template-columns: repeat(2, 1fr); 
+        flex-direction: column;
+        justify-content: space-evenly;
+        padding-top: 60px;
+    }
+    .card{
+        width: 80%;
+        height: 130px;
+        margin-left: 10%;
+        border: none;
+        box-shadow: 5px 10px 15px 3px rgba(0, 0, 0, 0.1);
+    }
+    .fa-bell{
+        color: hsl(135, 33%, 36%);
+        border: 1px solid hsl(135, 33%, 36%);
+        border-radius: 50%;
+        width: 50px;
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        font-size: 30px;
+        padding-top: 10px;
+        margin-top: 10px;
+        margin-left: 125px;
+    }
+    .fa-newspaper{
+        color: hsl(135, 33%, 36%);
+        border: 1px solid hsl(135, 33%, 36%);
+        border-radius: 50%;
+        width: 50px;
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        font-size: 30px;
+        padding-top: 10px;
+        margin-top: 10px;
+        margin-left: 125px;
+    }
+    .fa-search{
+        color: hsl(135, 33%, 36%);
+        border: 1px solid hsl(135, 33%, 36%);
+        border-radius: 50%;
+        width: 50px;
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        font-size: 30px;
+        padding-top: 10px;
+        margin-top: 10px;
+        margin-left: 125px;
+    }
+    .card-title{
+        text-align: center;
+        align-items: center;
+    }
+    .flex-ancor{
+        text-decoration: none;
+        color: hsl(135, 33%, 36%);
+    }
+    .flex-ancor:hover{
+        color: hsl(135, 33%, 36%);
     }
     footer{
         padding-top: 10%;
@@ -635,99 +1064,3 @@ footer{
 }
 /* FOOTER SECTION END */
 }
-</style>
-
-</head>
-<body>
-    <!-- header -->
-    <section class="header">
-        <span><i class="fa fa-phone" aria-hidden="true"></i></span>
-        <span class=".phone-number">Call us now (021) 99215740</span>
-    </section>
-    <!-- navbar start -->
-    <nav>
-        <div class="logo-div"><img src="/assets/logo.png" class="logo-div"></div>
-        <div class="ancors">
-            <a class="nav-ancor" style="color:hsl(135, 33%, 36%);" href="index.html">HOME</a>
-            <a class="nav-ancor" style="color: hsl(135, 33%, 36%);" href="department.html">DEPARTMENTS</a>
-            <a class="nav-ancor" style="color: hsl(135, 33%, 36%);" href="doctors.html">DOCTORS</a>
-            <a class="nav-ancor" style="color: hsl(135, 33%, 36%);" href="house-job.html">HOUSE JOB</a>
-            <a class="nav-ancor" style="color: hsl(135, 33%, 36%);" href="services.html">OUR SERVICES</a>
-            <a class="nav-ancor" style="color: hsl(135, 33%, 36%);" href="about.html">ABOUT</a>
-            <a class="nav-ancor" style="color: hsl(135, 33%, 36%);" href="contact.html">CONTACT</a>
-            <a class="nav-ancor" style="color: hsl(135, 33%, 36%);" href="tender.html">TENDER</a>
-        </div>
-        <div class="sindh-logo-div"><img src="/assets/sindh-logo.png" class="nav-sec-logo" height="100px" width="90px"><i
-                 data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
-                aria-controls="offcanvasRight" class=" fa-solid fa-bars" id="hamburger"></i></div>
-
-        <div class="offcanvas offcanvas-end w-100" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
-            <div class="offcanvas-header">
-                <h5 id="offcanvasRightLabel"></h5>
-                <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
-                    aria-label="Close"></button>
-            </div>
-            <div class="offcanvas-body">
-                <a class="nav-ancor" style="color:hsl(135, 33%, 36%);" href="index.html">HOME</a>
-            <a class="nav-ancor" style="color: hsl(135, 33%, 36%);" href="department.html">DEPARTMENTS</a>
-            <a class="nav-ancor" style="color: hsl(135, 33%, 36%);" href="doctors.html">DOCTORS</a>
-            <a class="nav-ancor" style="color: hsl(135, 33%, 36%);" href="house-job.html">HOUSE JOB</a>
-            <a class="nav-ancor" style="color: hsl(135, 33%, 36%);" href="services.html">OUR SERVICES</a>
-            <a class="nav-ancor" style="color: hsl(135, 33%, 36%);" href="about.html">ABOUT</a>
-            <a class="nav-ancor" style="color: hsl(135, 33%, 36%);" href="contact.html">CONTACT</a>
-            <a class="nav-ancor" style="color: hsl(135, 33%, 36%);" href="tender.html">TENDER</a>
-            </div>
-        </div>
-    </nav>
-    <!-- navbar end -->
-
-
-<!-- FOOTER START -->
-    <footer>
-        <div class="left">
-            <div class="footer-logo"><img src="/assets/logo.png" class="footer-logo"></div>
-            <div class="footer-left-para">Dr. Ruth K. M. Pfau, Civil Hospital Karachi
-                is an extensive multidisciplinary facility of
-                executive health care services in the heart of Karachi</div>
-            <div class="footer-left-location"><i class="fa-solid fa-location-dot"></i><span
-                    class="footer-left-span">Civil Hospital Karachi, Rafiqui H.J. Shaheed Road, Nanakwara, Saddar,
-                    Karachi, Sindh, Pakistan.</span>
-            </div>
-            <div class="footer-phone"><i class="fa-solid fa-phone"></i> <span class="footer-left-span"> (021)
-                    99521740</span></div>
-            <div class="footer-inbox"><i class="fa-solid fa-envelope"></i> <span class="footer-left-span">
-                    info@chk.gov.pk</span></div>
-            <a href="https://www.facebook.com/chkarachi?_rdr"><i class="fa-brands fa-facebook-f"></i></a>
-        </div>
-
-        <div class="center">
-            <div class="footer-center-title">
-                <h3 class="footer-center-title">Department</h3>
-            </div>
-            <div class="footer-ancors">
-                <a href="dental-care.html" class="footer-ancor">> Dental Care</a>
-                <a href="medicine.html" class="footer-ancor">> Medicine</a>
-                <a href="othopedic.html" class="footer-ancor">> Orthopedic</a>
-                <a href="emergency.html" class="footer-ancor">> Emergency</a>
-            </div>
-        </div>
-        <div class="right">
-            <div class="footer-right-title">
-                <h3 class="footer-right-title">Working Hours</h3>
-            </div>
-            <p class="working-days">Out-patient Department</p>
-            <p class="working-days">Out-Monday to Saturday | 8 AM to 2 PM
-                Sunday | OPD Closed</p>
-            <div class="right-footer-span">
-                Emergency Department & Pharmacy | 24x7
-            </div>
-        </div>
-
-
-    </footer>
-    <script src="https://kit.fontawesome.com/0a02fbb60a.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-</body>
-</html>
